--- a/ecom/store/templates/navbar.html
+++ b/ecom/store/templates/navbar.html
@@ -30,7 +30,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="{% url 'home' %}">All Products</a></li>
                         <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" href="{% url 'category' 'iPhone' %}">i-phones</a></li>
+                        <li><a class="dropdown-item" href="{% url 'category' 'iOS' %}">iPhones</a></li>
                         <li><a class="dropdown-item" href="{% url 'category' 'Android' %}">Android Phones</a></li>
                     </ul>
                 </li>
