--- a/ecom/store/templates/order_list.html
+++ b/ecom/store/templates/order_list.html
@@ -34,16 +34,16 @@
                             {% endif %}
                             <a href="{% url 'order_confirmation' order.id %}" class="btn btn-info btn-sm">View Details</a>
                          
-                            {% if order.status != 'Cancelled' and order.status != 'Delivered' and order.status != 'Returned' %}
+                            {% comment %} {% if order.status != 'Cancelled' and order.status != 'Delivered' and order.status != 'Returned' %}
                             <a href="#" class="btn btn-danger btn-sm" onclick="updateOrderStatus('{{ order.id }}', 'Cancelled');">
                                 Cancel
                             </a>
-                            {% endif %}
-                            {% if order.status == 'Delivered' %}
+                            {% endif %} {% endcomment %}
+                            {% comment %} {% if order.status == 'Delivered' %}
                             <a href="#" class="btn btn-warning btn-sm" onclick="updateOrderStatus('{{ order.id }}', 'Returned');">
                                 Return
                             </a>
-                            {% endif %}
+                            {% endif %} {% endcomment %}
                         </div>
                     </li>
                     {% endfor %}
