--- a/ecom/store/templates/password_reset.html
+++ b/ecom/store/templates/password_reset.html
@@ -32,6 +32,9 @@
 
   form a{
     font-size:20px
+
+
+
 }
 </style>
 
@@ -40,7 +43,7 @@
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Reset Password</button>
+    <button type="submit" class="btn btn-primary">Reset Password</button>
 </form>
 
 
