--- a/ecom/store/templates/profile.html
+++ b/ecom/store/templates/profile.html
@@ -56,6 +56,8 @@
                 </div>
                 <div class="mb-4">
                     <h4 class="text-center">Wallet Balance</h4>
+                    <a href="{% url 'wallet_transactions' %}">Wallet Transactions</a>
+
                     {% if user.wallet %}
                         <p class="text-center fw-bold" style="font-size: 24px;">₹{{ user.wallet.balance|floatformat:2 }}</p>
                         <ul> {% for transaction in wallet.wallet_transactions.all %}
@@ -95,7 +97,15 @@
                             </div>
                             <div>
                                 <a href="{% url 'manage_address_profile' address.id %}" class="btn btn-sm btn-outline-secondary me-2">Edit</a>
-                                <a href="{% url 'delete_address' address.id %}" class="btn btn-sm btn-outline-danger">Delete</a>
+                                {% comment %} <a href="{% url 'delete_address' address.id %}" class="btn btn-sm btn-outline-danger">Delete</a> {% endcomment %}
+                                <a href="{% url 'delete_address' address.id %}" class="btn btn-sm btn-outline-danger" onclick="return confirmDelete()">Delete</a>
+
+                                    <script type="text/javascript">
+                                    function confirmDelete() {
+                                        return confirm("Are you sure you want to delete this address? This action cannot be undone.");
+                                    }
+                                    </script>
+
                             </div>
                         </li>
                     {% endfor %}
