--- a/ecom/store_manager/templates/add_brand.html
+++ b/ecom/store_manager/templates/add_brand.html
@@ -13,8 +13,8 @@
   <header class="bg-dark py-5">
     <div class="container px-4 px-lg-5 my-5">
         <div class="text-center text-white">
-            <h1 class="display-4 fw-bolder">Store Manager </h1>
-            <p class="lead fw-normal text-white-50 mb-0"> </p>
+            <h1 class="display-4 fw-bolder">Store Manager Login page </h1>
+            <p class="lead fw-normal text-white-50 mb-0">Login to Your Account</p>
         </div>
     </div>
 </header> 
@@ -65,24 +65,23 @@
 {% endif %}
 
  
-
-
-
 {% if user.is_superuser %}
- 
-    <h1>Add a New Storage </h1>
+
+
+    <h1>Add a New Brand</h1>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Add Storage</button>
+        {{ brand_form.as_p }}
+        <button type="submit" class="btn btn-primary">Add Brand </button>
     </form>
-    <a href="{% url 'storage_list' %}">View All Storage</a>
+    {% comment %} <a href="{% url '' %}">View All Colors</a> {% endcomment %}
+
 
 
     {% else %}
     <p>You are not authorized to view this form.</p>
     {% endif %}
-
+    
   
 {% endblock content %}
 
