--- a/ecom/store_manager/templates/add_color.html
+++ b/ecom/store_manager/templates/add_color.html
@@ -74,7 +74,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Add Color</button>
+        <button type="submit" class="btn btn-primary">Add Color</button>
     </form>
     <a href="{% url 'color_list' %}">View All Colors</a>
 
