--- a/ecom/store_manager/templates/add_product.html
+++ b/ecom/store_manager/templates/add_product.html
@@ -76,14 +76,16 @@
     <h2>Product Details</h2>
     {{ product_form.as_p }}
 
-    <h2>Product Images (Minimum 3)</h2>
+    <h2>Product Images</h2>
     {{ image_formset.management_form }}
     {% for form in image_formset %}
         {{ form.as_p }}
     {% endfor %}
 
-    <button type="submit">Add Product</button>
+    <button type="submit" class="btn btn-primary">Add Product</button>
 </form>
+ 
+
 {% else %}
 <p>You are not authorized to view this form.</p>
 {% endif %}
